<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.shofiq.anagramsdetect.model.MainViewModel"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiFirstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstText"
            android:text="@={viewModel.firstText}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First String" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSecondText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecondText"
            android:text="@={viewModel.secondText}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Second String" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resultString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@={viewModel.resultText}">



    </TextView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:enabled="@{etFirstText.text.length() > 0 &amp;&amp; etSecondText.text.length() > 0}"
        android:text="@string/check_anagram"
        >


    </Button>




</LinearLayout>

</layout>